# HypothesisTesting

./: .gitignore  README.md  hypot.lyx
ctseg/: .gitignore  Makefile  README.md  ctseg-parallel  setup.py
ctseg/configs/: default.mk  macosx.mk
ctseg/python/: ctseg
ctseg/python/ctseg_py/: __init__.py  __main__.py  _npcompat.py  asciiplot.py  config.py  fourier.py  proc.py  stat.py  system.py
ctseg/src/: base.hh  base.tcc  bath.hh  bath.tcc  block.hh  block.tcc  det.hh  det.tcc  dia.hh  dia.tcc  dndft.hh  dndft.tcc  driver.hh  driver.tcc  nfft.hh  nfft.tcc  random.hh  seg.hh  seg.tcc  util.hh  util.tcc
ctseg/swig/: base.inc.i  cthyb.i  dndft.inc.i  driver.inc.i  nfft.inc.i  seg.inc.i  util.inc.i
data/aim-chiiw/: chiiw.ipynb  e0  vk
data/aim-chiiw/ed-result/: results.npz
data/aim-gtau/: edcheck.in  epsk  gtau.ipynb
data/aim-gtau/edtest/: results.npz
data/ising-chi/: tests.ipynb
data/ising-chi/type/: ising.in
data/ising-chi/wolff/: ising.in
data/ising-m0/: magn.ipynb
data/ising-m0/tt1.0/: ising.in
data/ising-m0/tt1.2/: ising.in
data/ising-m0/tt1.4/: ising.in
data/ising-m0/tt1.6/: ising.in
data/ising-m0/tt1.8/: ising.in
data/ising-m0/tt2.0/: ising.in
data/ising-m0/tt2.2/: ising.in
data/ising-m0/tt2.4/: ising.in
data/ising-m0/tt2.6/: ising.in
data/ising-m0/tt2.8/: ising.in
data/ising-m0/tt3.0/: ising.in
data/ising-m0/tt3.2/: ising.in
data/ising-m0/tt3.4/: ising.in
data/ising-m0/tt3.6/: ising.in
data/ising-m0/tt3.8/: ising.in
data/ising-m0/tt4.0/: ising.in
data/ising-m0/wt1.0/: ising.in
data/ising-m0/wt1.2/: ising.in
data/ising-m0/wt1.4/: ising.in
data/ising-m0/wt1.6/: ising.in
data/ising-m0/wt1.8/: ising.in
data/ising-m0/wt2.0/: ising.in
data/ising-u4/: bug.ipynb
ising/: CMakeLists.txt  README.md  chi.hh  lattice.hh  main.cc  updates.hh
paper/: Makefile  hypot.bib  hypot.lyx
promo/: seminar.pptx
(+20 files in other folders)
